<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_albums">

    <fragment
        android:id="@+id/navigation_albums"
        android:name="co.edu.uniandes.vinylsg12.ui.albums.AlbumsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="co.edu.uniandes.vinylsg12.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_musicians"
        android:name="co.edu.uniandes.vinylsg12.ui.musicians.MusiciansFragment"
        android:label="@string/title_musicians"
        tools:layout="@layout/fragment_musicians" />

    <fragment
        android:id="@+id/navigation_bands"
        android:name="co.edu.uniandes.vinylsg12.ui.bands.BandsFragment"
        android:label="@string/title_bands"
        tools:layout="@layout/fragment_bands" />
</navigation>