<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_background_vinyl"
    tools:context=".splash_screen_activity">

    <include
        layout="@layout/merge_logo_vinyl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv_vinyl"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="280dp"
        android:background="@color/background_component_90"
        android:fontFamily="@font/averia_libre_regular"
        android:gravity="start"
        android:paddingStart="40dp"
        android:text="@string/tv_vinyl"
        android:textColor="@color/primary_text"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_collections"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/background_component_60"
        android:fontFamily="@font/averia_libre_regular"
        android:gravity="start"
        android:paddingStart="40dp"
        android:text="@string/tv_collections"
        android:textColor="@color/primary_text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vinyl"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_just_visit"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginBottom="86dp"
        android:fontFamily="@font/averia_libre_regular"
        android:gravity="center"
        android:text="@string/just_visit"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/background_button"
        android:fontFamily="@font/averia_libre_regular"
        android:text="@string/btn_login"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/background_button_select"
        android:fontFamily="@font/averia_libre_regular"
        android:text="@string/btn_signup"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>