<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_background_vinyl"
    tools:context=".create_albums_activity">

    <TextView
        android:id="@+id/post_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:text="Clic en el botón para crear un album"
        android:textColor="@color/secondary_text"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_name"
        style="@style/Theme.EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:background="@color/secondary_color"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_name"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_cover_url"
        style="@style/Theme.EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_color"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_cover_url"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_release_date"
        style="@style/Theme.EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_color"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_release_date"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cover_url" />


    <EditText
        android:id="@+id/et_description"
        style="@style/Theme.EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_color"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_description"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_release_date" />

    <EditText
        android:id="@+id/et_genre"
        style="@style/Theme.EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_color"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_genre"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <EditText
        android:id="@+id/et_record_label"
        style="@style/Theme.EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_color"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_record_label"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_genre" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_album"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/background_button_select"
        android:fontFamily="@font/averia_libre_regular"
        android:text="@string/btn_create_album"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>