<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prize.PrizeFormActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/name"
                style="@style/Theme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary_color"

                android:drawableStart="@drawable/ic_text_field"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/organization"
                style="@style/Theme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary_color"

                android:drawableStart="@drawable/ic_musician"
                android:ems="10"
                android:hint="@string/hint_organization"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/description"
                style="@style/Theme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary_color"

                android:drawableStart="@drawable/ic_description"
                android:ems="10"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:maxLength="250"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.constraintlayout.widget.ConstraintLayout>